[package]
name = "rspirv-reflect"
version = "0.5.0"
description = "Simple descriptor reflection library for SPIR-V"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rendering"]
categories = ["api-bindings", "rendering"]
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/rspirv-reflect"
documentation = "https://docs.rs/rspirv-reflect"

[dependencies]
rspirv = "0.10"
thiserror = "1.0"
